Flicker fix didn't work

--- a/search-result-formatting.css
+++ b/search-result-formatting.css
@@ -1,9 +1,6 @@
 body{
    background-color: #176273 !important
 }
-.ui-page {
-    -webkit-backface-visibility: hidden;
-}
 @font-face {
     font-family: "OpenSans Regular";
     src: url(fonts/OpenSans-Regular.ttf);
